# SpookyGhost

./: .itch.toml  CMakeLists.txt  Info.plist.in  LICENSE  README.md  emscripten_shell.html.in  launch.sh  package.desktop
.github/workflows/: android.yml  codeql-analysis.yml  emscripten.yml  linux.yml  macos.yml  mingw.yml  windows.yml
android/: build.gradle.in
android/src/main/cpp/: CMakeLists.txt
android/src/main/java/: LoadLibraries.java.in  LoadLibrariesTV.java.in
android/src/main/res/values/: strings.xml.in
cmake/: custom_fontawesome.cmake  custom_fontawesome_download.in  custom_iconfontcppheaders.cmake  custom_iconfontcppheaders_download.in  find_ncine.cmake  package_build_android.cmake  package_check_info.cmake  package_copy_targets.cmake  package_generated_sources.cmake  package_get_version.cmake  package_imported_targets.cmake  package_info.cmake  package_installation.cmake  package_options.cmake  package_strip_binaries.cmake
include/: Animation.h  AnimationGroup.h  AnimationManager.h  Canvas.h  CanvasGuiStatus.h  Configuration.h  CurveAnimation.h  EasingCurve.h  GridAnimation.h  GridFunction.h  GridFunctionLibrary.h  GridFunctionParameter.h  IAnimation.h  LoopComponent.h  LuaSaver.h  LuaSerializer.h  ParallelAnimationGroup.h  PropertyAnimation.h  RenderGuiStatus.h  RenderResources.h  RenderingResources.h  Script.h  ScriptAnimation.h  ScriptManager.h  SequentialAnimationGroup.h  SerializerContext.h  Serializers.h  Sprite.h  SpriteAnimation.h  SpriteEntry.h  SpriteManager.h  Texture.h  UserInterface.h  gui_labels.h  main.h  shader_strings.h  singletons.h
include/gui/: AnimationWindow.h  AnimationsWindow.h  CanvasGuiSection.h  CanvasWindows.h  FileDialog.h  RenderGuiSection.h  RenderGuiWindow.h  RenderWindow.h  ScriptsWindow.h  SpriteWindow.h  SpritesWindow.h  TexturesWindow.h  UserInterface.h  gui_common.h  gui_labels.h  gui_tips.h
src/: Animation.cpp  AnimationGroup.cpp  AnimationManager.cpp  Canvas.cpp  CanvasGuiStatus.cpp  CurveAnimation.cpp  EasingCurve.cpp  GridAnimation.cpp  GridFunction.cpp  GridFunctionLibrary.cpp  IAnimation.cpp  LoopComponent.cpp  LuaSaver.cpp  LuaSerializer.cpp  ParallelAnimationGroup.cpp  PropertyAnimation.cpp  RenderGuiStatus.cpp  RenderResources.cpp  RenderingResources.cpp  Script.cpp  ScriptAnimation.cpp  ScriptManager.cpp  SequentialAnimationGroup.cpp  Serializers.cpp  Sprite.cpp  SpriteAnimation.cpp  SpriteEntry.cpp  SpriteManager.cpp  Texture.cpp  UserInterface.cpp  main.cpp  shader_strings.cpp  singletons.cpp
src/gui/: AnimationWindow.cpp  AnimationsWindow.cpp  CanvasGuiSection.cpp  CanvasWindows.cpp  FileDialog.cpp  RenderGuiSection.cpp  RenderGuiWindow.cpp  RenderWindow.cpp  ScriptsWindow.cpp  SpriteWindow.cpp  SpritesWindow.cpp  TexturesWindow.cpp  UserInterface.cpp  config_window.cpp  gui_common.cpp  openfile.cpp  style.cpp
